trying to connect to mysql db with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,18 @@ services:
       - .:/home/app/db
     links:
       - db
-  db: 
-    image: mongo:3
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+    ports:
+      - 3306:3306
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+
+    
